# cajal

./: .gitignore  .tavis.yml  FINAL_ACHIEVEMENT_SUMMARY.md  Makefile.train  Makefile.trained_chatbot  PERFORMANCE_PATCH_GUIDE.md  PROJECT_STATUS.md  README.md  README_CHATBOT.md  bookcorpus_tokenizer.merges  bookcorpus_tokenizer.special  bookcorpus_tokenizer.vocab  citadel  citadel.cpp  conf.py  debug_init  debug_init2  debug_init4  debug_kernels  debug_loss_issue  debug_loss_issue.mm  debug_msl_kernels.mm  debug_progressive  debug_progressive_kernels.mm  debug_transformer_init  debug_transformer_init.mm  demo_chatbot.sh  gradient_debug  gradient_inspect  index.mdc  learning_from_mistakes.mdc  loss_change_test  minimal_debug  minimal_pattern_test  msl_chatbot  msl_trained_chatbot  msl_training_chatbot  numerical_overflow_analysis  numerical_overflow_analysis.cpp  optimizer_debug  (+64 more)
docs/: Doxyfile  conf.py  plan.md  task_1_3_completion_summary.md  tasks_2_1_2_3_completion_summary.md  tasks_2_4_2_6_completion_summary.md
experiments/: distinction.py
makefiles/: Makefile.chatbot  Makefile.training_chatbot
scripts/: apply_performance_patch.py  embed_debug.mm  ffn_kernel_analysis.mm  fix_layer_norm_dispatch.mm  forward_debug.mm  gradient_debug.mm  gradient_inspect.mm  (+20 more)
src/: CMakeLists.txt  anothersoftmax.py  cajal  cajal.cpp  cajal.h  cajal.hpp  cajal.py  convolutional.cpp  convolutional.h  convolutional.py  dense.cpp  dense.h  dense.hpp  dense.py  dense.sh  dense_mnist.py  mnist_example copy 2.py  mnist_example copy.py  mnist_example.py  mnist_example.py.bak  moresoftmax.py  naive_sp.py  old_dense.py  perceptrons.cpp  perceptrons.h  secondsoftmax.py  sidepassnet.py  softmax.py
src/activations/: activations  activations.cpp  activations.h  activations.hpp  activations.sh  alt_activations.cpp  alt_activations.h  relu.cpp  relu.h
src/examples/: example_mnist.py  simple_transformer.mm
src/host/: chatbot.mm  chatbot_trained.mm  chatbot_with_training.mm  transformer_model.h  transformer_model.mm  transformer_model.mm.backup  transformer_model_fixed.mm  transformer_model_optimized.mm
src/initializers/: initalizers.py  initializers.cpp  initializers.hpp  initializers.sh
src/losses/: losses.cpp  losses.hpp  losses.sh
src/math/: mat_math copy.h  mat_math.cpp  mat_math.h  mat_math.hpp  mat_math.sh  math.py  tensor  tensor.cpp  tensor.h  tensor.hpp
src/math/stats/: data_prep.cpp  data_prep.h
src/msl/: backward_kernels.msl
src/optimizers/: adam.h  adam.hpp  optimizers.sh
src/tokenization/: bpe_tokenizer.cpp  bpe_tokenizer.h
(+139 files in other folders)
